# csgm

./: README.md  setup.cfg
configs/: seismic_imaging_conditional.json
scripts/: plot_std_energy_mean.py  plot_val_loss.py  seismic.slurm  seismic01.slurm  train_conditional_seismic_imaging_subset.py
