[metadata]
name = csgm
version = 1.1
author = Ali Siahkoohi
author_email = alisk@ucf.edu
description = Conditional score-based diffusion models for Bayesian inference in infinite dimensions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alisiahkoohi/csgm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    matplotlib
    seaborn
    numpy
    tqdm
    h5py
    gitpython
    torch
    scikit-learn
    pytest
    pandas

packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    scripts*
    assets*

[options.extras_require]
pytorch =
    torch
    pytorch-cuda
